test/Fail/Issue3012.err
Issue3012.agda:12.1-15: error: [CoverageIssue]
Incomplete pattern matching for partial. Missing cases:
  partial x .snd
when checking the definition of partial

Issue3012.agda:17.13-17: error: [UnequalTerms]
partial x .snd != x of type A
when checking that the expression refl has type partial x .snd ≡ x
